tests/failing/test23.tail
reduce{[double],[0]}(addd,0.00,cat{[double],[1]}([3.20,4.00],eachV{[int,double],[2]}(i2d,[8,3])))
